Stores Draft Done

--- a/precision/precisionaudio/stores.html
+++ b/precision/precisionaudio/stores.html
@@ -40,7 +40,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    <div class="logo">
+				<div class="logo">
                         <a href="index.html"><img src="img/logo.jpg" alt=""></a>
                     </div>
                 </div>
@@ -80,9 +80,12 @@
         <div class="zigzag-bottom"></div>
         <div class="container">
             <div class="row">
+                <div class="col-md-12">				
 				<h2 class="section-title">經銷商</h2>
-				<div id="map-canvas" style="width:500px; height:300px"></div>  <!--set up the map canvas div-->
-
+				
+				<div id="map-canvas" ></div>  <!--set up the map canvas div-->
+				</div>
+				</div>
             </div>  				
         </div>
     </div>
